; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-ipv4ll.c_ipv4ll_handler.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-ipv4ll.c_ipv4ll_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, %struct.TYPE_9__* }

@LINK_STATE_FAILED = common dso_local global i32 0, align 4
@LINK_STATE_LINGER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"Could not acquire IPv4 link-local address: %m\00", align 1
@.str.1 = private unnamed_addr constant [39 x i8] c"Failed to configure ipv4ll address: %m\00", align 1
@.str.2 = private unnamed_addr constant [34 x i8] c"IPv4 link-local unknown event: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i8*)* @ipv4ll_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipv4ll_handler(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.TYPE_9__*
  store %struct.TYPE_9__* %10, %struct.TYPE_9__** %7, align 8
  %11 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %12 = call i32 @assert(%struct.TYPE_9__* %11)
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 1
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %14, align 8
  %16 = call i32 @assert(%struct.TYPE_9__* %15)
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %18 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load i32, i32* @LINK_STATE_FAILED, align 4
  %21 = load i32, i32* @LINK_STATE_LINGER, align 4
  %22 = call i64 @IN_SET(i32 %19, i32 %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %3
  br label %70

25:                                               ; preds = %3
  %26 = load i32, i32* %5, align 4
  switch i32 %26, label %66 [
    i32 128, label %27
    i32 129, label %36
    i32 130, label %54
  ]

27:                                               ; preds = %25
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %29 = call i32 @ipv4ll_address_lost(%struct.TYPE_9__* %28)
  store i32 %29, i32* %8, align 4
  %30 = load i32, i32* %8, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %27
  %33 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %34 = call i32 @link_enter_failed(%struct.TYPE_9__* %33)
  br label %70

35:                                               ; preds = %27
  br label %70

36:                                               ; preds = %25
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %38 = call i32 @ipv4ll_address_lost(%struct.TYPE_9__* %37)
  store i32 %38, i32* %8, align 4
  %39 = load i32, i32* %8, align 4
  %40 = icmp slt i32 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %36
  %42 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %43 = call i32 @link_enter_failed(%struct.TYPE_9__* %42)
  br label %70

44:                                               ; preds = %36
  %45 = load i32*, i32** %4, align 8
  %46 = call i32 @sd_ipv4ll_restart(i32* %45)
  store i32 %46, i32* %8, align 4
  %47 = load i32, i32* %8, align 4
  %48 = icmp slt i32 %47, 0
  br i1 %48, label %49, label %53

49:                                               ; preds = %44
  %50 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %51 = load i32, i32* %8, align 4
  %52 = call i32 @log_link_warning_errno(%struct.TYPE_9__* %50, i32 %51, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  br label %53

53:                                               ; preds = %49, %44
  br label %70

54:                                               ; preds = %25
  %55 = load i32*, i32** %4, align 8
  %56 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %57 = call i32 @ipv4ll_address_claimed(i32* %55, %struct.TYPE_9__* %56)
  store i32 %57, i32* %8, align 4
  %58 = load i32, i32* %8, align 4
  %59 = icmp slt i32 %58, 0
  br i1 %59, label %60, label %65

60:                                               ; preds = %54
  %61 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %62 = call i32 @log_link_error(%struct.TYPE_9__* %61, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0))
  %63 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %64 = call i32 @link_enter_failed(%struct.TYPE_9__* %63)
  br label %70

65:                                               ; preds = %54
  br label %70

66:                                               ; preds = %25
  %67 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %68 = load i32, i32* %5, align 4
  %69 = call i32 @log_link_warning(%struct.TYPE_9__* %67, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0), i32 %68)
  br label %70

70:                                               ; preds = %24, %32, %41, %60, %66, %65, %53, %35
  ret void
}

declare dso_local i32 @assert(%struct.TYPE_9__*) #1

declare dso_local i64 @IN_SET(i32, i32, i32) #1

declare dso_local i32 @ipv4ll_address_lost(%struct.TYPE_9__*) #1

declare dso_local i32 @link_enter_failed(%struct.TYPE_9__*) #1

declare dso_local i32 @sd_ipv4ll_restart(i32*) #1

declare dso_local i32 @log_link_warning_errno(%struct.TYPE_9__*, i32, i8*) #1

declare dso_local i32 @ipv4ll_address_claimed(i32*, %struct.TYPE_9__*) #1

declare dso_local i32 @log_link_error(%struct.TYPE_9__*, i8*) #1

declare dso_local i32 @log_link_warning(%struct.TYPE_9__*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
